create documentation with swagger
